examples/type_system/failing/71_hm_if_known_type_compile_mismatch.flx
fn expect_int(x: Int) -> Int {
    x
}

fn main() -> Unit with IO {
    let picked = if true {
        "left"
    } else {
        "right"
    }
    print(to_string(expect_int(picked)))
}
